feat: add host translation terms
